--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div class="panel panel-success">
+<div class="panel panel-info">
 <div class="panel-heading">
   <h1 ng-if="name">Hello, {{name}}</h1>
 </div>
